=== HEAD

* Make the pagination extension work on frozen datasets (jeremyevans)

* Make Dataset#server work for frozen model datasets using the sharding plugin (jeremyevans)

* Make Dataset#nullify in the null_dataset extension work on frozen datasets (jeremyevans)

* Make Model#set_server work when using a frozen model dataset (jeremyevans)

* Make Dataset#ungraphed work on a frozen model dataset (jeremyevans)

* Add Dataset#with_{autoid,fetch,numrows} to the mock adapter, returning cloned datasets with the setting changed (jeremyevans)

* Make looser_typecasting extension handle the strict BigDecimal parsing introduced in ruby 2.4rc1 (jeremyevans)

* Make Database#{db,opts}= in the sequel_3_dataset_methods extension raise for frozen datasets (jeremyevans)

* Speed up repeated calls to Dataset#{interval,range} for frozen datasets using a cached placeholder literalizer (jeremyevans)

* Speed up repeated calls to Dataset#get with a single argument for frozen datasets using a cached placeholder literalizer (jeremyevans)

* Speed up repeated calls to Dataset#{first,last} with arguments/blocks for frozen datasets using a cached placeholder literalizer (jeremyevans)

* Speed up repeated calls to Dataset#{avg,min,max,sum} for frozen datasets using a cached placeholder literalizer (jeremyevans)

* Cache dataset returned by Dataset#skip_locked for frozen datasets (jeremyevans)

* Cache dataset returned by Dataset#for_update for frozen datasets (jeremyevans)

* Cache dataset returned by Dataset#un{filtered,grouped,limited,ordered} for frozen datasets (jeremyevans)

* Cache dataset returned by Dataset#reverse (no args) for frozen datasets (jeremyevans)

* Cache dataset returned by Dataset#invert for frozen datasets (jeremyevans)

* Speed up repeated calls to Dataset#count with an argument or block for frozen datasets using a cached placeholder literalizer (jeremyevans)
