@@ -583,24 +583,19 @@ describe "A SQLite database" do
     @db[:test3].delete
   end
 
-  def assert_autoincrement(table, value)
-    id1 = table.insert(value)
-    table.delete
-    id2 = table.insert(value)
-    id2.must_be :>, id1
-  end
 
-  it "should preserve autoincrement" do
-    @db.create_table!(:testautoincrement) do
-      primary_key :id, :type => Integer
+  it "should preserve autoincrement after table modification" do
+    @db.create_table!(:test2) do
+      primary_key :id
       Integer :val, :null => false
     end
-    t = @db[:testautoincrement]
-    assert_autoincrement(t, :val => 1)
+    @db.rename_column(:test2, :val, :value)
 
-    @db.rename_column(:testautoincrement, :val, :value)
-
-    assert_autoincrement(t, :value => 1)
+    t = @db[:test2]
+    id1 = t.insert(:value=>1)
+    t.delete
+    id2 = t.insert(:value=>1)
+    id2.must_be :>, id1
   end
   
   it "should handle quoted tables when dropping or renaming columns" do
