@@ -1,5 +1,9 @@
 === HEAD
 
+* Do not set :auto_increment in the schema information for integer columns that are part of a composite primary key on SQLite (jeremyevans)
+
+* Use autoincrement setting on integer primary key columns when emulating table modification methods on SQLite (thenrio, jeremyevans) (#1277, #1278)
+
 * Make the pagination extension work on frozen datasets (jeremyevans)
 
 * Make Dataset#server work for frozen model datasets using the sharding plugin (jeremyevans)
